Tree-sitter conditionally sets 'down-list-function' for major modes
that have defined 'sexp-list' in 'treesit-thing-settings' to enable
the 'down-list' motion command.

*** New function 'treesit-up-list'.
Tree-sitter conditionally sets 'up-list-function' for major modes
that have defined 'sexp-list' in 'treesit-thing-settings' to enable
the 'up-list' motion command.

+++
*** New function 'treesit-language-display-name'.
This new function returns the display name of a language given the
language symbol.  For example, 'cpp' is translated to "C++".  A new
variable 'treesit-language-display-name-alist' holds the translations of
language symbols where that translation is not trivial.

+++
*** New command 'treesit-explore'
This command replaces 'treesit-explore-mode'.  It turns on
'treesit-explore-mode' if it’s not on, and pops up the explorer buffer
if it’s already on.

+++
*** 'treesit-explore-mode' now supports local parsers
Now 'treesit-explore-mode' (or 'treesit-explore') prompts for a parser
rather than a language, and it’s now possible to select a local parser
at point to explore.

+++
*** New variable 'treesit-aggregated-simple-imenu-settings'
This variable allows major modes to setup Imenu for multiple languages.

+++
** New optional BUFFER argument for 'string-pixel-width'.
If supplied, 'string-pixel-width' will use any face remappings from
BUFFER when computing the string's width.

---
** New macro 'with-work-buffer'.
This macro is similar to the already existing macro 'with-temp-buffer',
except that it does not allocate a new temporary buffer on each call,
but tries to reuse those previously allocated (up to a number defined by
the new variable 'work-buffer-limit', which defaults to 10).

+++
** 'date-to-time' now defaults to local time.
The function now assumes local time instead of Universal Time when
its argument lacks explicit time zone information.  This has been the
de-facto behavior since Emacs 24 although documentation said otherwise.